--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,14 @@ export(getEst)
 export(getPower)
 export(makeCondition)
 export(makePlot)
-export(makeTalbe)
+export(makeTable)
 export(runSimulation)
+import(dplyr)
+import(ggplot2)
 import(lavaan)
-import(tidyverse)
+import(purrr)
+import(stringr)
+import(tidyr)
 importFrom(MASS,mvrnorm)
 importFrom(glue,glue)
+importFrom(magrittr,"%>%")
