--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(analysis)
 export(dataCut)
 export(extractEst)
 export(genData)
-export(getBias)
+export(getAccuracy)
 export(getPower)
 export(makeCondition)
 export(makePlot)
